WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58205
REGRESSION(
r83256
): Text-decoration bleeds into shadow DOM
https://bugs.webkit.org/show_bug.cgi?id=58205
Summary
REGRESSION(r83256): Text-decoration bleeds into shadow DOM
Dimitri Glazkov (Google)
Reported
2011-04-10 09:37:45 PDT
This became apparent only after
http://trac.webkit.org/changeset/83397
, but no big deal -- easy fix.
Attachments
Patch
(2.38 KB, patch)
2011-04-10 10:26 PDT
,
Dimitri Glazkov (Google)
no flags
Details
Formatted Diff
Diff
Patch
(3.81 KB, patch)
2011-04-10 10:29 PDT
,
Dimitri Glazkov (Google)
andersca
: review+
andersca
: commit-queue+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-04-10 10:26:24 PDT
Created
attachment 88951
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2011-04-10 10:29:52 PDT
Created
attachment 88952
[details]
Patch
Dimitri Glazkov (Google)
Comment 3
2011-04-10 10:36:04 PDT
Committed
r83400
: <
http://trac.webkit.org/changeset/83400
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug