2011-04-10  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Anders Carlsson.

        REGRESSION(r83256): Text-decoration bleeds into shadow DOM
        https://bugs.webkit.org/show_bug.cgi?id=58205

        * platform/chromium/test_expectations.txt: Removed the test that starts
            passing after this change.
2011-04-10  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Anders Carlsson.

        REGRESSION(r83256): Text-decoration bleeds into shadow DOM
        https://bugs.webkit.org/show_bug.cgi?id=58205

        Now that the shadow root is a never-styled element, we need to walk to
        parent to find out if we're inside of a shadow DOM subtree.

        Test: media/controls-styling.html

        * css/CSSStyleSelector.cpp:
        (WebCore::isAtShadowBoundary): Added helper function.
        (WebCore::CSSStyleSelector::adjustRenderStyle): Changed to use the helper.

Canonical link: https://commits.webkit.org/73172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83400 268f45cc-cd09-0410-ab3c-d52691b4dbfc